# faster-qwen3-tts

./: BLOG.md  README.md  baseline_bench.py  pyproject.toml  setup.sh
benchmarks/: baseline.py  chunk_sweep.py  streaming.py  throughput.py
demo/: Dockerfile  index.html  server.py
examples/: generate_with_embedding.py  openai_server.py
faster_qwen3_tts/: __init__.py  cli.py  generate.py  model.py  predictor_graph.py  streaming.py  talker_graph.py
qwen3_tts_cuda_graphs/: model.py
tests/: test_e2e_parity.py  test_openai_server_api.py  test_sample_rate.py  test_voice_clone_prompt_api.py
