[build-system]
requires = ["setuptools>=61.0,<69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["faster_qwen3_tts*"]

[project]
name = "faster-qwen3-tts"
version = "0.2.2"
description = "Real-time Qwen3-TTS inference using manual CUDA graph capture"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andres Marafioti" }]
keywords = ["tts", "qwen", "cuda", "cudagraph", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "qwen-tts>=0.1.1",
    "transformers>=4.57",
    "torch>=2.1",
    "numpy",
    "soundfile",
    "huggingface-hub",
]

[project.optional-dependencies]
demo = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
faster-qwen3-tts = "faster_qwen3_tts.cli:main"

[project.urls]
Homepage = "https://github.com/andimarafioti/faster-qwen3-tts"
Repository = "https://github.com/andimarafioti/faster-qwen3-tts"
